force-app/main/default/objects/Company__c/Company__c.object-meta.xml
<CustomObject>
    <description>Financial companies in the Porcelanosa Group</description>
    <label>Company</label>
    <nameField>
        <label>CompanyName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>