force-app/main/default/objects/Company__c/fields/Company_concat__c.field-meta.xml
<CustomField>
    <fullName>Company_concat__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company_concat</label>
    <type>Text</type>
</CustomField>