force-app/main/default/objects/Company__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <description>Código identificador de sociedad de referencia</description>
    <externalId>true</externalId>
    <label>CompanyCode</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>