force-app/main/default/objects/Company__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Código de País</description>
    <inlineHelpText>Incluya el código del pais al que pertenece la compañía o sociedad de referencia</inlineHelpText>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>